--- a/MVC_2_Repository/MVC_2_Repository.csproj
+++ b/MVC_2_Repository/MVC_2_Repository.csproj
@@ -1,21 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Interfaces\**" />
-    <Compile Remove="Repositories\**" />
-    <Content Remove="Interfaces\**" />
-    <Content Remove="Repositories\**" />
-    <EmbeddedResource Remove="Interfaces\**" />
-    <EmbeddedResource Remove="Repositories\**" />
-    <None Remove="Interfaces\**" />
-    <None Remove="Repositories\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.14" />
